Fix non-wrap of button string.

--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -130,5 +130,9 @@ html, body {
 
             }
         }
+        .btn-confirm {
+            background-color:#249007;
+            white-space: pre-line;
+        }
     }
 }
